alignment solved for mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -138,8 +138,8 @@ body {
   position: relative;
   perspective: 1000px;
   cursor: pointer;
-  width: 50%; /* Set initial width */
-  height: 50%; /* Set initial height to make it square */
+  width: 200px; /* Set initial width */
+  height: 220px; /* Set initial height to make it square */
   margin: 10px;
 }
 
@@ -184,10 +184,28 @@ body {
 
 .project-card.flip {
   position : relative;  
-  width: 90%; /* Set expanded width */
-  height: 90%; /* Set expanded height */
+  width: 400px; /* Set expanded width */
+  height: 300px; /* Set expanded height */
   z-index: 1000;
+  align-items: center;
+  align-self: center;
 }
+
+
+@media (max-width: 768px) {
+  .project-card.flip {
+    position:static; /* Use fixed positioning to center it in the viewport */
+    top: 50%;
+    left: 50%;
+    transform:translate(-50%, -50%);
+    width: 150%; /* Use viewport width for responsive sizing */
+    height: 150%; /* Allow height to adjust automatically */
+    max-height: 50vh; /* Ensure it doesn't exceed the viewport height */
+    z-index: 1000;
+    align-items: center;
+  }
+}
+
 
 .project-card .project-image {
   width: 100%;
@@ -195,6 +213,9 @@ body {
   transition: opacity 0.3s;
 }
 
+.project-card.show {
+  opacity: 1;
+}
 .project-card .hover-text {
   display: none;
   position: absolute;
@@ -215,10 +236,24 @@ body {
   display: block;
 }
 
-/*.blur-background {
+.blur-background {
   filter: blur(5px);
 }
-*/
+
+.filter-btn {
+  cursor: pointer;
+  padding: 10px;
+  margin: 5px;
+  border: none;
+  background-color: #f0f0f0;
+}
+
+.filter-btn.active {
+  background-color: #007bff;
+  color: white;
+}
+
+
 hr {
   margin: 1rem 0;
   color: inherit;
@@ -398,8 +433,8 @@ sup {
 
 .project-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-  gap: 20px;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  gap: 10px;
 }
 
 .project-card {
@@ -410,18 +445,40 @@ sup {
   border-radius: 8px;
   overflow: hidden;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  transition: opacity 0.5s ease-in-out;
 }
 
 .project-image {
   width: 100%;
   height: auto;
-  min-height: 300px;
-  object-fit: cover;
+  min-height: 50px;
+  object-fit:contain;
+  align-items: center;
+  vertical-align: middle;
+  
 }
 
 .project-details {
   padding: 20px;
 }
+
+.project-title-container {
+  position: sticky;
+  top: 0;
+  background: white;
+  z-index: 1000;
+  padding: 10px 0;
+}
+
+.filter-buttons {
+  position: sticky;
+  top: 100px;
+  z-index: 2200;
+  padding: 0 px 0;
+  
+}
+
+
 
 .project-title {
   font-size: 1.2rem;
